# designing-mlops-framework

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  DIAGRAMS.md  Definitions.md  DefinitionsII.md  MIGRATION_PROPOSAL_V2.md  MIGRATION_PROPOSAL_V3.md  README.md  README_VENV.md  doc.md  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  setup.py  spark.py  template_orchestrated_training_dag.yaml  template_prediction_dag.yaml  template_training_dag.yaml  todo.md  training_dag.yaml
.devcontainer/: Dockerfile.pyspark  devcontainer.json
.github/workflows/: cd.yml  ci.yml  release.yml
config/: defaults.yaml  dev.yaml  local.yaml
config/domains/: CountryA.yaml
config/profiles/: dev.yaml  prod.yaml
dags/: part_failure_dag.py
docker/: Dockerfile  entrypoint.sh
docs/: PYSPARK_RUNNING_ORDERS.md  framework-improvement-proposal.md
example_model/: __init__.py  constants.py  evaluate.py  predict.py  requirements.txt  train.py  utils.py
example_model/config/: dev.yaml  global.yaml  predict-dev.yaml  predict-local.yaml  train-local.yaml
example_model/data/: sample_inference.csv  sample_train.csv
example_model/notebooks/: 01_development.ipynb
example_model/pipeline/: predict.yaml  train.yaml
example_model/sql/: load_prediction_data.sql  load_training_data.sql
example_model/tests/: conftest.py
example_model_v2/: __init__.py  constants.py  evaluate.py  predict.py  train.py
example_model_v2/config/: dev.yaml  gcs.yaml  global.yaml  local.yaml  predict-dev.yaml
example_model_v2/data/: sample_inference.csv  sample_trend.csv
example_model_v2/pipeline/: predict.yaml  train.yaml
examples/: 01_utils_serialization.py  02_utils_storage.py  03_config_direct.py  04_config_from_profiles.py  04_config_from_yaml.py  05_artifacts_standalone.py  06_train_predict_workflow.py  06_train_standalone.py  07_prediction_standalone.py  08_experiment_tracking.py  README.md  _bootstrap.py
examples/config/: dev.yaml  global.yaml  prod.yaml
examples/pipelines/: predict.yaml  train.yaml
mlops_framework/: README.md  setup.py
mlops_framework/mlops_framework/: __init__.py
mlplatform/: __init__.py  pyproject.toml  setup.py
mlplatform/artifacts/: __init__.py  core.py  registry.py
mlplatform/cli/: __init__.py  main.py
mlplatform/config/: __init__.py  builder.py  loader.py  models.py
mlplatform/core/: __init__.py  artifact_registry.py  context.py  prediction_schema.py  predictor.py  trainer.py
mlplatform/data/: __init__.py  io.py
mlplatform/inference/: __init__.py  base.py  fastapi_serving.py  in_process.py  spark_batch.py
mlplatform/mlplatform/: __init__.py  _version.py  data_io.py  log.py  runner.py  schema.py
mlplatform/mlplatform/artifacts/: __init__.py  base.py  core.py  local.py
mlplatform/mlplatform/cli/: main.py
mlplatform/mlplatform/config/: __init__.py  composer.py  dag.py  factory.py  inference.yaml  loader.py  models.py  registry.py  schema.py  train.yaml
mlplatform/mlplatform/core/: __init__.py  artifact_path_builder.py  artifact_registry.py  context.py  enums.py  prediction_schema.py  predictor.py  steps.py  trainer.py  version_resolver.py
mlplatform/mlplatform/data/: __init__.py  io.py  loader.py  sources.py
mlplatform/mlplatform/etb/: __init__.py  base.py  local_json.py  none.py
mlplatform/mlplatform/inference/: base.py  fastapi_serving.py  in_process.py  spark_batch.py
mlplatform/mlplatform/invocation/: __init__.py  base.py  distributed.py  fastapi_serving.py  in_process.py  rest.py  spark_batch.py
mlplatform/mlplatform/local/: __init__.py  runner.py
mlplatform/mlplatform/profiles/: __init__.py  profile.py  registry.py  resolver.py
mlplatform/mlplatform/runner/: __init__.py  dev.py  resolve.py  workflow.py
mlplatform/mlplatform/runners/: __init__.py  base.py  dataproc_spark.py  local.py  local_spark.py
mlplatform/mlplatform/spark/: __init__.py  config_serializer.py  main.py  packager.py
mlplatform/mlplatform/storage/: __init__.py  base.py  gcs.py  local.py
mlplatform/mlplatform/tracking/: __init__.py  base.py  local.py  none.py  vertexai.py
mlplatform/mlplatform/utils/: __init__.py  serialization.py  storage_helpers.py
mlplatform/profiles/: __init__.py  registry.py
mlplatform/runner/: __init__.py  dev.py  execute.py  resolve.py
mlplatform/spark/: __init__.py  config_serializer.py  main.py  packager.py
mlplatform/storage/: __init__.py  base.py  gcs.py  local.py  none.py
mlplatform/tests/: conftest.py
mlplatform/tests/integration/: test_config_merge.py
mlplatform/tests/unit/: test_config_loader.py  test_config_models.py  test_config_schema.py  test_prediction_schema.py  test_predictor_base.py  test_utils.py
mlplatform/tracking/: __init__.py  base.py  vertexai.py
mlplatform/utils/: __init__.py  logging.py  reports.py  serialization.py  storage_helpers.py
model_code/: __init__.py  constants.py  evaluate.py  predict.py  train.py  utils.py
model_code/config/: dev.yaml  gcs.yaml  global.yaml  prod.yaml
model_code/notebooks/: 01_development.ipynb
model_code/tests/: conftest.py
notebooks/: run_local_workflow.ipynb
plat/: __init__.py  _version.py
plat/cli/: main.py
plat/config/: __init__.py  loader.py  models.py
plat/core/: __init__.py  artifact_registry.py  context.py  prediction_schema.py
plat/data/: __init__.py  io.py
plat/inference/: __init__.py
plat/profiles/: __init__.py  registry.py
plat/runner/: __init__.py  dev.py  resolve.py  workflow.py
plat/spark/: __init__.py  config_serializer.py  main.py  packager.py
plat/storage/: base.py  gcs.py  local.py
plat/tracking/: __init__.py  base.py  vertexai.py
plat/utils/: __init__.py  serialization.py  storage_helpers.py
projects/: __init__.py
projects/part_failure_model/: README.md  __init__.py  model.py  (+2 more)
scripts/: run_cli.sh  run_example_model_test.sh  run_local.sh  run_test.sh  test_config_composition.py  test_example_model.py  test_framework.py  test_spark_local.py
template_model/: __init__.py  constants.py  evaluate.py  predict.py  train.py  utils.py
tests/: conftest.py
(+85 files in other folders)
