[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlplatform"
version = "0.3.0"
description = "Production-ready MLOps framework with pluggable backends"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "scikit-learn>=1.0",
    "pandas>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "joblib>=1.0",
]

[project.optional-dependencies]
# ── subpackage extras (install only what you need) ──────────────────────────
utils = [
    # save_plot requires matplotlib (plotly is optional and not listed here)
    "matplotlib>=3.5",
]
storage = [
    # GCSStorage backend
    "google-cloud-storage>=2.0",
]
tracking = [
    # VertexAITracker backend
    "google-cloud-aiplatform>=1.0",
]
spark = [
    "pyspark>=3.0",
]
# ── legacy / compatibility extras ────────────────────────────────────────────
config = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
parquet = [
    "pyarrow>=10.0",
]
# ── development ───────────────────────────────────────────────────────────────
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "matplotlib>=3.5",  # needed to run utils tests
]

[project.scripts]
mlplatform = "mlplatform.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlplatform*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
