[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlplatform"
dynamic = ["version"]
description = "Production-ready MLOps platform with pluggable backends"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=1.0",
    "joblib>=1.0",
]

[project.optional-dependencies]
# ── v0.1.x public API ────────────────────────────────────────────────────────
# Install only what you need today; add more extras as the platform grows.
utils = [
    # Serialisation helpers (sanitize, to_serializable) have no extra deps.
    # Storage helpers (save_plot, save_html) need matplotlib + GCS client.
    "matplotlib>=3.5",
    "google-cloud-storage>=2.0",
]
config = [
    # Pydantic v2 is required for TrainingConfig / PredictionConfig / PipelineConfig.
    "pydantic>=2.0",
]
# ── meta-extra: installs everything in the current public API ─────────────────
core = [
    "matplotlib>=3.5",
    "google-cloud-storage>=2.0",
    "pydantic>=2.0",
]
# ── future extras (not yet part of the public API) ───────────────────────────
orchestration = []   # placeholder — will be populated in a future release
tracking = [
    "google-cloud-aiplatform>=1.0",
]
spark = [
    "pyspark>=3.0",
]
serving = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
parquet = [
    "pyarrow>=10.0",
]
# ── development ───────────────────────────────────────────────────────────────
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pydantic>=2.0",
    "matplotlib>=3.5",
]

[project.scripts]
mlplatform = "mlplatform.cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "mlplatform._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mlplatform*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
